--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,10 @@
   },
   "devDependencies": {
     "@angular/cli": "^9.0.2",
-    "@nativescript/schematics": "^1.0.0"
-  }
+    "@nativescript/schematics": "^1.0.0",
+    "@types/jasmine": "^3.5.4",
+    "@types/jest": "^25.1.2",
+    "@types/mocha": "^7.0.1"
+  },
+  "dependencies": {}
 }
